tests/snapshots/render_snapshots__code-blocks-80.snap
---
source: tests/render_snapshots.rs
expression: tree.to_plain_text()
---
Code Blocks
═══════════

Rust
────

▏ fn main() {
▏     let greeting = "hello";
▏     println!("{greeting}, world");
▏ }

Shell
─────

▏ #!/bin/sh
▏ set -eu
▏ for f in *.md; do
▏     wc -l "$f"
▏ done

Python
──────

▏ def fib(n: int) -> int:
▏     a, b = 0, 1
▏     for _ in range(n):
▏         a, b = b, a + b
▏     return a

No language
───────────

▏ plain preformatted text
▏   with indentation preserved

Indented code block
───────────────────

▏ indented code
▏ second line

Long lines
──────────

▏ this is an extremely long line of code that will certainly not fit into an eighty column terminal and therefore exercises horizontal scrolling or wrapping behavior 1234567890

Inline
──────

Use cargo build --release to compile, and rustup update to update.

▏ tab-indented code line
