tests/snapshots/render_snapshots__footnotes-120.snap
---
source: tests/render_snapshots.rs
expression: tree.to_plain_text()
---
Footnotes
═════════

Simple reference[1] in a sentence.

Multiple references[1][note] in one paragraph, and a long one[long].

Footnotes can appear in lists:

• item with a footnote[list]
• plain item

And in bold text with a marker[1] too.

After the definitions
─────────────────────

Text following the footnote definitions[note].

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Footnotes

[1] The first footnote.
[note] A named footnote with code and a link.
[long] A longer footnote definition that spans multiple lines and contains a second paragraph.

       The second paragraph of the footnote.
[list] Referenced from a list item.
